--- a/src/front/styles/contactUs.css
+++ b/src/front/styles/contactUs.css
@@ -1,6 +1,6 @@
 /*------------------------------------------Top----------------------------------------*/
 .title-contactUs {
-  font-size: 6rem;
+  font-size: 4rem;
   font-weight: bold;
   color: white;
   text-align: center;
@@ -17,6 +17,7 @@
 
 /*------------------------------------------Container----------------------------------------*/
 .container-contactUs {
+  margin-top: 2rem;
   margin-top: 2rem;
 }
 
@@ -81,7 +82,7 @@
 }
 
 .social-information {
-  margin: 2rem;
+  margin-bottom: 2rem;
   color: white;
   align-items: center;
   justify-content: center;
