--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -140,7 +140,7 @@ h6.subtitles-home {
     justify-content: center;
     margin: auto;
     margin-bottom: 8rem;
-    margin-top: 8rem ;
+    margin-top: 8rem;
     padding-bottom: 3rem;
 }
 
@@ -298,7 +298,11 @@ h6.subtitles-home {
     margin: auto;
     width: 70%;
     height: 30rem;
-    background: url(https://e1.pxfuel.com/desktop-wallpaper/911/61/desktop-wallpaper-the-best-gamer-headsets-to-buy-gaming-headphones.jpg) ;
+    background: url(https://e1.pxfuel.com/desktop-wallpaper/911/61/desktop-wallpaper-the-best-gamer-headsets-to-buy-gaming-headphones.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left;
+    background-attachment: fixed;
     margin-bottom: 3rem;
     border-radius: 3rem;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -312,23 +316,23 @@ h6.subtitles-home {
     display: flex;
     position: relative;
 
-.code-title{
-    color: white;
-    padding: 2rem;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 2rem;
-    border: 1px solid rga(255, 255, 255, 0.18);
-    align-items: center;
-    text-align: center;
-    font-size: 3rem;
-    margin-top: 2rem;
-    margin-bottom: 3rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 120%;
-    text-transform: capitalize;
-}
+    .code-title {
+        color: white;
+        padding: 2rem;
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 2rem;
+        border: 1px solid rga(255, 255, 255, 0.18);
+        align-items: center;
+        text-align: center;
+        font-size: 3rem;
+        margin-top: 2rem;
+        margin-bottom: 3rem;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 120%;
+        text-transform: capitalize;
+    }
 }
 
 .btn-code {
@@ -374,9 +378,9 @@ h6.subtitles-home {
     overflow: hidden;
 }
 
-.carousel-item{
-height: 30rem;
-width: 100%;
+.carousel-item {
+    height: 30rem;
+    width: 100%;
 }
 
 .img-carousel {
