--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -349,7 +349,7 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">EyA Solutions, Byte by Byte </span><img src="/workspaces/FinalProject-AmandaBogantes-EuniceHidalgo-YahairaCalvo-StefanyMendez/src/front/img/logo.png"/>
+                    <span class="apple-link">EyA Solutions, Byte by Byte </span>
                     <!-- <br> Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>. -->
                   </td>
                 </tr>
